--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -13,11 +13,11 @@
     {% endif %}
     {% endfor %}
   </ul>
-  <ul class="copyright">{{ thisyear }}    
-    {% if site.owner %}{{ site.owner }}{% else %}{{ site.title }}{% endif %}</li>
-  	<li>PRASHANT KUMAR: <a href="http://html5up.net" target="_blank"></a></li>
-    <li>BLOG<a href="http://html5up.net" target="_blank"></a></li>
-    <li>PRODUCTS<a href="http://jekyllrb.com" target="_blank"></a></li>
-  	<li>CONTACT<a href="http://jekyllrb.com" target="_blank"></a></li>
+  <ul class="copyright">
+    <li>&copy; {{ thisyear }}</li>
+    <li>PRASHANT KUMAR <a href="http://html5up.net" target="_blank"></a></li>
+    <li>BLOG <a href="http://html5up.net" target="_blank"></a></li>
+    <li>PRODUCTS <a href="http://jekyllrb.com" target="_blank"></a></li>
+  	<li>CONTACT <a href="http://jekyllrb.com" target="_blank"></a></li>
   </ul>
 </footer>
