--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
     {% endfor %}
   </ul>
   <ul class="copyright">
-    <li>&copy; {{ thisyear }}</li>
+    <li>&copy; { thisyear }</li>
     <li>PRASHANT KUMAR <a href="http://html5up.net" target="_blank"></a></li>
     <li>BLOG <a href="http://html5up.net" target="_blank"></a></li>
     <li>PRODUCTS <a href="http://jekyllrb.com" target="_blank"></a></li>
