--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -15,7 +15,7 @@
   </ul>
   <ul class="copyright">
     <li>&copy; { thisyear }</li>
-    <li>PRASHANT KUMAR <a href="http://html5up.net" target="_blank"></a></li>
+    <li><a href="index.html">PRASHANT KUMAR</a></li>
     <li>BLOG <a href="http://html5up.net" target="_blank"></a></li>
     <li>PRODUCTS <a href="http://jekyllrb.com" target="_blank"></a></li>
   	<li>CONTACT <a href="http://jekyllrb.com" target="_blank"></a></li>
