--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,8 +14,8 @@
     {% endfor %}
   </ul>
   <ul class="copyright">
-    <li>&copy; { thisyear }</li>
-    <li><a href="index.html">PRASHANT KUMAR</a></li>
+    <li>&copy; 2021</li>
+    <li><a href="index.html">PRASHANT</a></li>
     <li>BLOG <a href="http://html5up.net" target="_blank"></a></li>
     <li>PRODUCTS <a href="http://jekyllrb.com" target="_blank"></a></li>
   	<li>CONTACT <a href="http://jekyllrb.com" target="_blank"></a></li>
