--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -16,8 +16,8 @@
   <ul class="copyright">
     <li>COPYRIGHT; 2021</li>
     <li><a href="index.html">PRASHANT</a></li>
-    <li>BLOG <a href="http://html5up.net" target="_blank"></a></li>
-    <li>PRODUCTS <a href="http://jekyllrb.com" target="_blank"></a></li>
-  	<li>CONTACT <a href="http://jekyllrb.com" target="_blank"></a></li>
+    <li><a href="http://html5up.net">BLOG</a></li>
+    <li><a href="http://jekyllrb.com">PRODUCTS</a></li>
+  	<li><a href="http://jekyllrb.com">CONTACT</a></li>
   </ul>
 </footer>
