--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -14,7 +14,7 @@
     {% endfor %}
   </ul>
   <ul class="copyright">
-    <li>COPYRIGHT; 2021</li>
+    <li>COPYRIGHT &copy; 2021</li>
     <li><a href="index.html">PRASHANT</a></li>
     <li><a href="http://html5up.net">BLOG</a></li>
     <li><a href="http://jekyllrb.com">PRODUCTS</a></li>
