--- a/_layouts/landing.html
+++ b/_layouts/landing.html
@@ -12,6 +12,8 @@
     <!-- Page Wrapper -->
     <div id="page-wrapper">
 
+      {% include header.html %}
+
       {{ content }}
 
       {% include footer.html %}
